--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,6 +1,5 @@
-@import './base.css';
-
-#app{
-    height: 100vh;
-    width: 100vw;
+@import 'base.css';
+#app {
+  height: 100vh;
+  width: 100vw;
 }
