--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -15,6 +15,7 @@
   --vt-hover: #8ab0ab;
 
   --vt-primary: #5e6455;
+
   --vt-primary-text: #333333;
   --vt-light-text: #a7abdd;
   --vt-light-bg: #d1d1d1;
@@ -38,6 +39,7 @@
   --vt-c-text-dark-2: rgba(235, 235, 235, 0.64);
   --vt-shadow-sidenva-dark: -1px 20px 8px 6px rgb(0 0 0 / 70%), 1px 2px 4px 0px rgb(0 0 0 / 70%),
     -20px 18px 20px 7px rgb(0 0 0 / 70%), 2px 4px 16px 0px rgb(139 156 156 / 70%);
+  --vt-primary-hover-dark: #dff5be8f;
   --vt-hover-dark: rgb(118 134 97);
   --vt-table-dark-zebra-header: #dff5be8f;
   --vt-table-dark-zebra-data-cell: #2b2b2ba3;
@@ -64,8 +66,10 @@
   --color-zebra-header: var(--color-active-link);
   --color-zebra-cell: var(--vt-table-dark-zebra-data-cell);
   --shadow-table: var(--vt-table-light-box-shadow);
+  --color-text-table: var(--vt-table-dark-zebra-data-cell-hover);
   --color-text-table-hover: var(--vt-table-dark-zebra-data-cell-hover);
   --color-shadow-sidenav: var(--vt-shadow-sidenva-light);
+  --color-primary-hover: var(--vt-primary-hover-dark);
 }
 
 @media (prefers-color-scheme: dark) {
@@ -85,8 +89,10 @@
     --color-zebra-header: var(--vt-table-dark-zebra-header);
     --color-zebra-cell: var(--vt-table-dark-zebra-data-cell);
     --shadow-table: var(--vt-table-dark-box-shadow);
+    --color-text-table: var(--vt-table-dark-zebra-data-cell-hover);
     --color-text-table-hover: var(--vt-table-dark-zebra-data-cell-hover);
     --color-shadow-sidenav: var(--vt-shadow-sidenva-dark);
+    --color-primary-hover: var(--vt-primary-hover-dark);
   }
 }
 
