--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -23,6 +23,7 @@
   --vt-light-active: #eca1a1;
   --vt-light-active-bg: rgba(255, 255, 255, 0.83);
   --vt-light-border: #51a3a;
+  --vt-light-danger: #ff6666;
   --vt-light-link-deactivate-purple: #baa2b0;
   --vt-table-light-box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.5);
   --vt-shadow-sidenva-light: -1px 20px 8px 6px rgb(137 142 176), 1px 2px 4px 0px rgb(165 170 218),
@@ -47,6 +48,7 @@
   --vt-table-dark-box-shadow: 0px 1px 8px 6px rgb(0 0 0 / 70%), 1px 2px 4px 0px rgb(0 0 0 / 70%),
     -1px -1px 20px 7px rgb(0 0 0 / 70%), 2px 4px 16px 0px rgb(139 156 156 / 70%);
   --vt-table-dark-zebra-data-cell-hover: var(--vt-c-white);
+  --vt-light-dark: #ff6666;
 }
 
 /* semantic color variables for this project */
@@ -73,6 +75,7 @@
   --color-text-table-hover: var(--vt-table-dark-zebra-data-cell-hover);
   --color-shadow-sidenav: var(--vt-shadow-sidenva-light);
   --color-primary-hover: var(--vt-primary-hover-dark);
+  --color-danger: var(--vt-light-danger);
 }
 
 @media (prefers-color-scheme: dark) {
@@ -98,6 +101,7 @@
     --color-text-table-hover: var(--vt-table-dark-zebra-data-cell-hover);
     --color-shadow-sidenav: var(--vt-shadow-sidenva-dark);
     --color-primary-hover: var(--vt-primary-hover-dark);
+    --color-danger: var(--vt-light-dark);
   }
 }
 
