--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -130,3 +130,8 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+@font-face {
+  font-family: 'digital';
+  src: url('digital-7.ttf') format('truetype');
+}
