chore:🌻 remove font from root path

--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -144,5 +144,5 @@ body {
 
 @font-face {
   font-family: 'digital';
-  src: url('digital-7.ttf') format('truetype');
+  src: url('./fonts/digital-7.ttf') format('truetype');
 }
